--- a/QuizApp/QuizApp.WASM/wwwroot/index.html
+++ b/QuizApp/QuizApp.WASM/wwwroot/index.html
@@ -7,17 +7,16 @@
     <title>QuizAppWasm</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="QuizAppWasm.styles.css" rel="stylesheet" /> -->
 </head>
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        
     </div>
 
     <div id="blazor-error-ui">
@@ -26,6 +25,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
