--- a/QuizApp/QuizApp.WASM/wwwroot/index.html
+++ b/QuizApp/QuizApp.WASM/wwwroot/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/app.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link href="lib/css/bootstrap.min.css"/>
+    <link href="lib/css/bootstrap.min.css" />
+
+    <script src="js/ExamView.js"></script>
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="QuizAppWasm.styles.css" rel="stylesheet" /> -->
 </head>
