--- a/QuizApp/QuizApp.WASM/wwwroot/index.html
+++ b/QuizApp/QuizApp.WASM/wwwroot/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="lib/css/bootstrap.min.css" />
-
+    <link href="QuizApp.BlazorWASM.styles.css" rel="stylesheet"/>
     <script src="js/ExamView.js"></script>
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="QuizAppWasm.styles.css" rel="stylesheet" /> -->
