Solved Submission Error bug

--- a/QuizApp/QuizApp.WASM/wwwroot/index.html
+++ b/QuizApp/QuizApp.WASM/wwwroot/index.html
@@ -12,8 +12,8 @@
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="QuizApp.BlazorWASM.styles.css" rel="stylesheet"/>
     <script src="js/ExamView.js"></script>
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="QuizAppWasm.styles.css" rel="stylesheet" /> -->
+        <!--If you add any scoped CSS files, uncomment the following to load them-->
+    <link href="QuizAppWasm.styles.css" rel="stylesheet" /> 
 </head>
 
 <body>
