Fixed Event Callback

--- a/QuizApp/QuizApp.WASM/wwwroot/index.html
+++ b/QuizApp/QuizApp.WASM/wwwroot/index.html
@@ -10,9 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="lib/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
-    <link href="QuizApp.BlazorWASM.styles.css" rel="stylesheet"/>
+    <link href="QuizApp.BlazorWASM.styles.css" rel="stylesheet" />
     <script src="js/ExamView.js"></script>
-        <!--If you add any scoped CSS files, uncomment the following to load them-->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+    <!--If you add any scoped CSS files, uncomment the following to load them-->
 </head>
 
 <body>
